servicesStyles.css
/* ... */
@media(max-width: 1140px)
{
    .navBar{
        background-color: rgb(1, 26, 102);
    }
    .navBar .mainMenu {
        height: 100vh;
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1000;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        background: rgb(1, 26, 102);
        transition: top 1s ease;
        display: none;
    }
    .navBar .mainMenu .closeMenu {
        display: block;
        position: absolute;
        top: 20px;
        right: 20px;
        z-index: 1000;

    }
    .navBar .openMenu {
        display: block;
        color: white;
    }
    .navBar .openMenu:hover{
        background-color: rgb(1, 26, 102);
    }
    .navBar .mainMenu li a{
        color: white;
    }
    .navBar .mainMenu li a:hover {
        background: none;
        color: rgb(255, 123, 0);
    }
    .navBar ul li.button a{
        background-color: transparent;
        color: rgb(0, 90, 0);
        font-weight: bold;
    }
    .devs{
        display: block;
        color: white;
        padding-top: 20px;
        font-family: 'Montserrat';
        border-top: 1px solid white;
    }
    .closeMenu{
        color: white;
    }
    .icons i {
        display: inline-block;
        padding: 12px;
        color: white;
    }
} 

